# general_framework

./: README.md  README_id.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml  static.yml
docs/: README.md  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
docs/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
docs/web/: .last_build_id
native_lib/: CMakeLists.txt  readme.md
package/general_framework/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
package/general_framework/dev/: README.md  client.dart  create_template.dart  generate_language.dart  generate_scheme.dart  install.dart  pubspec.yaml  test.dart
package/general_framework/example/: README.md  example.dart  examples.dart  pubspec.yaml
package/general_framework/example_app/: .gitignore  README.md  out.js  (+3 more)
package/general_framework_android/: pubspec.yaml
package/general_framework_apis/: pubspec.yaml
package/general_framework_assets_flutter/: pubspec.yaml
package/general_framework_cli/: pubspec.yaml
package/general_framework_client/: pubspec.yaml
package/general_framework_dart/: activate.sh  pubspec.yaml
package/general_framework_flutter/: LICENSE  pubspec.yaml  pubspec_overrides.yaml
package/general_framework_fucshia/: pubspec.yaml
package/general_framework_ios/: CHANGELOG.md  pubspec.yaml
package/general_framework_isar_scheme/: pubspec.yaml
package/general_framework_linux/: pubspec.yaml
package/general_framework_macos/: pubspec.yaml
package/general_framework_scheme/: pubspec.yaml
package/general_framework_server/: pubspec.yaml
package/general_framework_web/: pubspec.yaml
package/general_framework_windows/: README.md  pubspec.yaml
test/: general_framework_test.dart
web/general_framework_docs/: .gitignore  .metadata  LICENSE  README.md  analysis_options.yaml  compile.sh  guide-dart-general-library.md  pubspec.yaml
(+559 files in other folders)
